<resources>
    <string name="app_name">Recipes</string>
    <string name="title_activity_single_recipe_fragment">SingleRecipeFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="how_to_cook">How to cook</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="failed_to_fetch_recipes_pull_to_refresh">Failed to fetch recipes. Pull to refresh</string>
    <string name="server_error">Could not connect to the server</string>
    <string name="favorite_recipe_add_error">Could not add recipe to favorites</string>
    <string name="favorite_recipe_remove_error">Could not remove recipe from favorites</string>
    <string name="no_recipe">No recipe found</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="recipe_title">Recipe Title...</string>
    <string name="recipe_photo">Recipe Photo:</string>
    <string name="ingredients_">Ingredients:</string>
    <string name="insert_ingredients">Insert Ingredients</string>
    <string name="insert_instructions">Insert Instructions</string>
    <string name="instructions">Instructions:</string>
    <string name="add_new_recipe_success">Recipe was added successfully</string>
    <string name="add_new_recipe_error">Failed to add recipe</string>
    <string name="mandatory_recipe">Recipe name is mandatory</string>

</resources>