<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/add_recipe_heading_padding">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/cancel"
                android:textSize="@dimen/add_recipe_cancel_text_size" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/done"
                android:textSize="@dimen/add_recipe_done_text_size" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_recipe"
            android:gravity="center"
            android:textSize="@dimen/add_new_recipe_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_title"
            android:layout_marginBottom="@dimen/add_recipe_title_top_bottom_margin"
            android:layout_marginTop="@dimen/add_recipe_title_top_bottom_margin"
            android:layout_marginEnd="@dimen/add_recipe_title_start_end_margin"
            android:layout_marginStart="@dimen/add_recipe_title_start_end_margin"
            android:textSize="@dimen/add_recipe_title_size"
            android:gravity="center"
            android:autofillHints=""
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/add_recipe_photo_layout_margin"
            android:layout_marginTop="@dimen/add_recipe_photo_layout_margin"
            android:layout_marginStart="@dimen/add_recipe_photo_layout_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_photo_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/recipe_photo"
                android:textSize="@dimen/recipe_photo_text_size"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add_recipe_photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/camera"
                android:background="@color/teal_200"
                android:layout_marginEnd="20dp"
                android:visibility="visible"
                tools:visibility="visible"
                tools:ignore="ContentDescription"/>

            <ImageButton
                android:id="@+id/pick_photo_from_files"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/gallery"
                android:background="@color/teal_200"
                android:visibility="visible"
                tools:visibility="visible"
                tools:ignore="ContentDescription"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe_photo_layout"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="top|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/recipe_photo"
                tools:background="@drawable/ic_launcher_background"
                tools:src="@drawable/ic_launcher_foreground"
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/image_close"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/close"
                android:visibility="gone"
                tools:visibility="visible"
                tools:ignore="ContentDescription"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredients_"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add_ingredients"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:background="@color/teal_200"
                android:visibility="visible"
                tools:visibility="visible"
                android:layout_marginEnd="20dp"
                tools:ignore="ContentDescription"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:id="@+id/ingredients_recycler_view"
            android:visibility="gone"
            tools:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_instructions"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/add_instructions"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/add"
                android:background="@color/teal_200"
                android:visibility="visible"
                tools:visibility="visible"
                android:layout_marginEnd="20dp"
                tools:ignore="ContentDescription"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            tools:visibility="gone"
            android:id="@+id/instructions_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

    </LinearLayout>
</ScrollView>